2006-04-10  Martin Baulig  <martin@ximian.com>
	Released version 0.13 "Luxemburg" of the Mono Debugger :-)


svn path=/trunk/debugger/; revision=59281

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2006-04-10  Martin Baulig  <martin@ximian.com>
 
-	* configure.in: Bumped version number to 0.13.
+	Released version 0.13 "Luxemburg" of the Mono Debugger :-)
 
 2006-04-10  Martin Baulig  <martin@ximian.com>
 
