2006-04-12  Martin Baulig  <martin@ximian.com>
	* test/testsuite/testnativeexec.cs: New test.


svn path=/trunk/debugger/; revision=59394

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-12  Martin Baulig  <martin@ximian.com>
+
+	* test/testsuite/testnativeexec.cs: New test.
+
 2006-04-11  Martin Baulig  <martin@ximian.com>
 
 	* test/testsuite/TestRestart.cs: New test.
