--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-04-18  Martin Baulig  <martin@ximian.com>
 
+	* classes/AddressDomain.cs
+	(AddressDomain): Make the .ctor internal.
+
+2006-04-18  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/ITargetMemoryAccess.cs
 	(ITargetMemoryReader): Removed this interface; `TargetReader' is
 	the only class implementing it.
