--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2006-04-18  Martin Baulig  <martin@ximian.com>
 
 	* interfaces/ITargetMemoryAccess.cs
+	(ITargetMemoryInfo): Make this interface internal.
+
+2006-04-18  Martin Baulig  <martin@ximian.com>
+
+	* interfaces/ITargetMemoryAccess.cs
 	(ITargetMemoryAccess): Make this interface internal.
 
 2006-04-18  Martin Baulig  <martin@ximian.com>
