--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 2006-04-18  Martin Baulig  <martin@ximian.com>
 
 	* interfaces/ITargetMemoryAccess.cs
+	(ITargetMemoryAccess): Only implement `ITargetInfo'.
+	(ITargetMemoryAccess.TargetMemoryInfo): Removed.
+	(ITargetMemoryAccess.Architecture): New property.
+
+2006-04-18  Martin Baulig  <martin@ximian.com>
+
+	* interfaces/ITargetMemoryAccess.cs
 	(ITargetMemoryInfo.AddressDomain): Moved into `ITargetInfo'.
 	(ITargetInfo.AddressDomain): Moved here from `ITargetMemoryInfo'.
 
