2006-04-18  Martin Baulig  <martin@ximian.com>
	* backends/Thread.cs
	(Thread.TargetMemoryAccess): Removed; just use `Thread' directly.


svn path=/trunk/debugger/; revision=59559

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-04-18  Martin Baulig  <martin@ximian.com>
 
+	* backends/Thread.cs
+	(Thread.TargetMemoryAccess): Removed; just use `Thread' directly.
+
+2006-04-18  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/ITargetMemoryAccess.cs
 	(ITargetMemoryAccess): Only implement `ITargetInfo'.
 	(ITargetMemoryAccess.TargetMemoryInfo): Removed.
