2006-04-18  Martin Baulig  <martin@ximian.com>
	* interfaces/ITargetMemoryAccess.cs
	(ITargetInfo): Removed.


svn path=/trunk/debugger/; revision=59563

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2006-04-18  Martin Baulig  <martin@ximian.com>
 
 	* interfaces/ITargetMemoryAccess.cs
+	(ITargetInfo): Removed.
+
+2006-04-18  Martin Baulig  <martin@ximian.com>
+
+	* interfaces/ITargetMemoryAccess.cs
 	(ITargetMemoryAccess): Removed all the writing methods.
 
 2006-04-18  Martin Baulig  <martin@ximian.com>
