2006-04-18  Martin Baulig  <martin@ximian.com>
	* backends/Inferior.cs
	(Inferior.GetFileContents): New public static method; obsoletes
	the `Utils' class form backends/classes/Utils.cs.


svn path=/trunk/debugger/; revision=59570

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2006-04-18  Martin Baulig  <martin@ximian.com>
 
+	* backends/Inferior.cs
+	(Inferior.GetFileContents): New public static method; obsoletes
+	the `Utils' class form backends/classes/Utils.cs.
+
+	* backends/classes/Utils.cs: Removed.
+
+2006-04-18  Martin Baulig  <martin@ximian.com>
+
 	* backends/EventQueue.cs: New file; merged classes/Threading.cs
 	and backends/classes/EventQueue.cs here.
 
