--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2006-04-18  Martin Baulig  <martin@ximian.com>
 
+	* backends/server/x86-ptrace.cs
+	(x86_ptrace_kill): Send a SIGKILL to the process before using
+	`ptrace (PTRACE_KILL)' so we actually kill it.
+
+	* backends/ThreadManager.cs
+	(ThreadManager.Dispose): Call `wait_thread.Abort()' prior to
+	`wait_thread.Join()'.	
+
+2006-04-18  Martin Baulig  <martin@ximian.com>
+
 	* backends/Debugger.cs: Moved to ../classes/
 	* backends/Process.cs: Moved to ../classes/
 	* backends/Thread.cs: Moved to ../classes/
