--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-04-19  Martin Baulig  <martin@ximian.com>
 
+	* test/testsuite/testnativeattach.cs: New test.
+
+2006-04-19  Martin Baulig  <martin@ximian.com>
+
 	* backends/ThreadManager.cs
 	(ThreadManager.start_wait_thread): Catch `ThreadAbortException'
 	and reset the abort.  See the comment in the source code.
